[draft] checkstyle + pmd + findbug